# cloud-bp-advisor

./: .gitignore  README.md  TESTING_GUIDE.md
agent-backend/: Dockerfile  pyproject.toml  streamlit_app.py
agent-backend/src/: config.py  graph.py  main.py  memory.py  state.py
agent-backend/src/agents/: __init__.py  async_stream.py  aws_architect.py  e2e_workflow.py  gcp_architect.py  graph_workflow.py  orchestrator.py  prompts.py  pubsub_firestore.py  qa_validator.py  tf_coder.py  tf_runner.py  tools.py
agent-backend/src/cloud_bp_advisor_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent-backend/tests/: test_memory_orchestration.py  test_persistence_e2e.py  verify_gcp_firestore.py  verify_ui_persistence.py
docs/: PRD.md
docs/archive/: implementation-backup.md  initial-idea.md  prd.md  prompt.md  subs.txt  task.md
infrastructure/: main.tf  variables.tf
k8s/: kustomization.yaml  namespace.yaml  sandbox-worker-deployment.yaml
sandbox-worker/: Dockerfile  requirements.txt
sandbox-worker/src/: logger.py  rag_ingestion.py  terraform_executor.py  worker_app.py
scripts/: deploy.sh  deploy_sandbox.sh  watch_memory.py
tests/: e2e_test.sh  verify_integration.py
